EPMRPP-107138 fix sonar